hago el commit and push